# ai-agent-creaai

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.streamlit/: cinfig.toml
output/: .clean  Carla Naselli_report.txt  DigitalMakers_report.md  Francesco Anzelmo_report.md  Front end developer_questions.md  Frontend Developer_questions.md  ML Engineering_ GenAI _ AI Agent_report.txt  aitho.it_report.txt  digitalmakers s.r.l._report.md  feedback.md  interview_questions.md
output/.session/: last_session.txt
output/feedback/: question_1_feedback.md
src/interview_prep/: crew.py  demo.py  main.py
src/interview_prep/config/: agents.yaml  tasks.yaml
src/interview_prep/tools/: interview_manager.py
src/interview_prep/utils/: interview_manager.py
